hover data for cases and deaths and also for mean cases and mean deaths

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -43,10 +43,8 @@ yaxis_tickformat = ,f
 
 [FIG_CASES_MEAN_3]
 x = date
-y = ["cases",
-     "cases (mean of ±3 days)"]
-color_discrete_map = {"cases (mean of ±3 days)": "rgb(0,121,164)",
-                      "cases": "rgba(0,121,164,0.15)"}
+y = ["cases"]
+color_discrete_map = {"cases": "rgba(0,121,164,0.15)"}
 labels = {"dateRep": "reporting date"}
 title = New Corona cases
 xaxis_title = Date
@@ -58,7 +56,15 @@ hover_data_format_column = cases cumulative
 hover_data_format = ,.0f
 
 
+
 [FIG_CASES_MEAN_3_SUBFIG]
+y = ["cases (mean of ±3 days)"]
+color_discrete_map = {"cases (mean of ±3 days)": "rgb(0,121,164)"}
+hover_data = ["RKI reporting date"]
+hover_data_strftime = RKI reporting date
+
+
+[FIG_CASES_MEAN_3_SUBFIG_2]
 y = ["cases (Nowcast RKI)",
      "cases (mean of ±3 days of Nowcast RKI)",
      "Infections (based on 7 day nowcast of RKI - 5 days regarding incubation period)",
@@ -84,10 +90,8 @@ yaxis_tickformat = ,f
 
 [FIG_DEATHS_MEAN_3]
 x = date
-y = ["deaths (mean of ±3 days)",
-	 "deaths"]
-color_discrete_map = {"deaths (mean of ±3 days)": "rgb(255,0,0)",
-                      "deaths": "rgba(255,0,0,0.15)"}
+y = ["deaths"]
+color_discrete_map = {"deaths": "rgba(255,0,0,0.15)"}
 title = Corona deaths<br>(note: numbers for deaths by reference date may still rise sharply in the final weeks, as the outcome is not yet clear)
 xaxis_title = Date
 yaxis_title = Number of deaths
@@ -99,6 +103,13 @@ hover_data_format = ,.0f
 
 
 [FIG_DEATHS_MEAN_3_SUBFIG]
+y = ["deaths (mean of ±3 days)"]
+color_discrete_map = {"deaths (mean of ±3 days)": "rgb(255,0,0)"}
+hover_data = ["RKI reporting date"]
+hover_data_strftime = RKI reporting date
+
+
+[FIG_DEATHS_MEAN_3_SUBFIG_2]
 y = ["deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)",
      "deaths by reference date (start of illness, alternatively reporting date)"]
 color_discrete_map = {"deaths (mean of ±3 days) by reference date (start of illness, alternatively reporting date)": "rgb(117,214,193)",
