add number pcr tests of a week to hover data

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -173,6 +173,9 @@ xaxis_title = Calendar week
 yaxis_title = Number of tests
 barmode = stack
 yaxis_tickformat = ,f
+hover_data = ["number of tests"]
+hover_data_format = ,.0f
+hover_data_format_column = number of tests
 
 
 [SUBFIG_PCR_TESTS_POSITIVE_RATE]
