update title for new reported deaths by reference date

--- a/graph_definitions.ini
+++ b/graph_definitions.ini
@@ -20,7 +20,7 @@ y = ["new reported deaths with known start of illness",
      "new reported deaths with unknown start of illness (reporting date)"]
 color_discrete_map = {"new reported deaths with known start of illness": "rgb(255,0,0)",
                       "new reported deaths with unknown start of illness (reporting date)": "rgb(255,153,0)"}
-title = New reported deaths per reference date (start of illness, alternatively reporting date)
+title = Reference date for today’s reported deaths<br>(Reference date is start of illness, alternatively reporting date of the case)
 xaxis_title = Reference date (start of illness, alternatively reporting date)
 yaxis_title = New reported deaths
 barmode = stack
