add graphs for hospitalization per age group and cases per outbreak

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -199,6 +199,31 @@ yaxis_title = Percentage
 yaxis_tickformat = .2f
 
 
+[FIG_HOSPITALIZATIONS]
+x = calendar week
+y = ["cases hospitalized age group 00 - 04",
+     "cases hospitalized age group 05 - 14",
+     "cases hospitalized age group 15 - 34",
+     "cases hospitalized age group 35 - 59",
+     "cases hospitalized age group 60 - 79",
+     "cases hospitalized age group 80+",
+     "cases not hospitalized",
+     "cases not known if hospitalized"]
+color_discrete_map = {"cases hospitalized age group 00 - 04": "rgb(79,129,189)",
+                      "cases hospitalized age group 05 - 14": "rgb(207,64,64)",
+                      "cases hospitalized age group 15 - 34": "rgb(118,146,59)",
+                      "cases hospitalized age group 35 - 59": "rgb(96,74,123)",
+                      "cases hospitalized age group 60 - 79": "rgb(48,131,155)",
+                      "cases hospitalized age group 80+": "rgb(228,108,9)",
+                      "cases not hospitalized": "rgb(210,231,214)",
+                      "cases not known if hospitalized": "rgb(220,220,220)"}
+title = Number of Hospitalizations per Week (note: figures may still rise in the final weeks)<br>(display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Cases
+yaxis_tickformat = .0f
+barmode = stack
+
+
 [FIG_CASES_PER_OUTBREAK]
 x = calendar week
 y = ["Unknown",
@@ -248,6 +273,7 @@ xaxis_title = Calendar week
 yaxis_title = Cases
 yaxis_tickformat = .0f
 barmode = stack
+
 
 [FIG_CASES_PER_OUTBREAK_IN_PERCENT]
 x = calendar week
