--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -207,6 +207,7 @@ y = ["cases hospitalized age group 00 - 04",
      "cases hospitalized age group 35 - 59",
      "cases hospitalized age group 60 - 79",
      "cases hospitalized age group 80+",
+     "cases hospitalized unknown age group",
      "cases not hospitalized",
      "cases not known if hospitalized"]
 color_discrete_map = {"cases hospitalized age group 00 - 04": "rgb(79,129,189)",
@@ -215,6 +216,7 @@ color_discrete_map = {"cases hospitalized age group 00 - 04": "rgb(79,129,189)",
                       "cases hospitalized age group 35 - 59": "rgb(96,74,123)",
                       "cases hospitalized age group 60 - 79": "rgb(48,131,155)",
                       "cases hospitalized age group 80+": "rgb(228,108,9)",
+                      "cases hospitalized unknown age group": "rgb(250,218,94)",
                       "cases not hospitalized": "rgb(210,231,214)",
                       "cases not known if hospitalized": "rgb(220,220,220)"}
 title = Number of Hospitalizations per Week (note: figures may still rise in the final weeks)<br>(display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
