--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -199,6 +199,135 @@ yaxis_title = Percentage
 yaxis_tickformat = .2f
 
 
+[FIG_HOSPITALIZATIONS]
+x = calendar week
+y = ["cases hospitalized age group 00 - 04",
+     "cases hospitalized age group 05 - 14",
+     "cases hospitalized age group 15 - 34",
+     "cases hospitalized age group 35 - 59",
+     "cases hospitalized age group 60 - 79",
+     "cases hospitalized age group 80+",
+     "cases hospitalized unknown age group",
+     "cases not hospitalized",
+     "cases not known if hospitalized"]
+color_discrete_map = {"cases hospitalized age group 00 - 04": "rgb(79,129,189)",
+                      "cases hospitalized age group 05 - 14": "rgb(207,64,64)",
+                      "cases hospitalized age group 15 - 34": "rgb(118,146,59)",
+                      "cases hospitalized age group 35 - 59": "rgb(96,74,123)",
+                      "cases hospitalized age group 60 - 79": "rgb(48,131,155)",
+                      "cases hospitalized age group 80+": "rgb(228,108,9)",
+                      "cases hospitalized unknown age group": "rgb(250,218,94)",
+                      "cases not hospitalized": "rgb(210,231,214)",
+                      "cases not known if hospitalized": "rgb(220,220,220)"}
+title = Number of Hospitalizations per Week (note: figures may still rise in the final weeks)<br>(display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Cases
+yaxis_tickformat = .0f
+barmode = stack
+
+
+[FIG_CASES_PER_OUTBREAK]
+x = calendar week
+y = ["Unknown",
+     "Other",
+     "Public transport",
+     "Overnight stay",
+     "Dining venue",
+     "Leisure",
+     "Kindergarten, after-school child care",
+     "Day-care centre for the elderly",
+     "Care facility",
+     "Educational institution",
+     "Work place",
+     "Medical rehabilitation",
+     "Medical practice",
+     "Hospital",
+     "Health care centre",
+     "Residential home",
+     "Refugee accomodation",
+     "Retirement/nursing home",
+     "Private household",
+     "Residences",
+     "Not documented in an outbreak"]
+color_discrete_map = {"Unknown": "rgb(127,127,127)",
+     "Other": "rgb(179,179,179)",
+     "Public transport": "rgb(233,132,186)",
+     "Overnight stay": "rgb(190,91,75)",
+     "Dining venue": "rgb(233,200,38)",
+     "Leisure": "rgb(253,183,21)",
+     "Kindergarten, after-school child care": "rgb(216,70,3)",
+     "Day-care centre for the elderly": "rgb(248,143,61)",
+     "Care facility": "rgb(252,208,160)",
+     "Educational institution": "rgb(125,109,133)",
+     "Work place": "rgb(228,27,24)",
+     "Medical rehabilitation": "rgb(1,68,24)",
+     "Medical practice": "rgb(40,134,73)",
+     "Hospital": "rgb(113,197,117)",
+     "Health care centre": "rgb(198,233,190)",
+     "Residential home": "rgb(8,49,100)",
+     "Refugee accomodation": "rgb(24,99,172)",
+     "Retirement/nursing home": "rgb(71,150,203)",
+     "Private household": "rgb(147,194,221)",
+     "Residences": "rgb(207,223,248)",
+     "Not documented in an outbreak": "rgb(220,220,220)"}
+title = Cases attributed to an outbreak (note: figures may still rise in the final weeks)<br>(display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Cases
+yaxis_tickformat = .0f
+barmode = stack
+
+
+[FIG_CASES_PER_OUTBREAK_IN_PERCENT]
+x = calendar week
+y = ["Unknown (%)",
+     "Other (%)",
+     "Public transport (%)",
+     "Overnight stay (%)",
+     "Dining venue (%)",
+     "Leisure (%)",
+     "Kindergarten, after-school child care (%)",
+     "Day-care centre for the elderly (%)",
+     "Care facility (%)",
+     "Educational institution (%)",
+     "Work place (%)",
+     "Medical rehabilitation (%)",
+     "Medical practice (%)",
+     "Hospital (%)",
+     "Health care centre (%)",
+     "Residential home (%)",
+     "Refugee accomodation (%)",
+     "Retirement/nursing home (%)",
+     "Private household (%)",
+     "Residences (%)",
+     "Not documented in an outbreak (%)"]
+color_discrete_map = {"Unknown (%)": "rgb(127,127,127)",
+     "Other (%)": "rgb(179,179,179)",
+     "Public transport (%)": "rgb(233,132,186)",
+     "Overnight stay (%)": "rgb(190,91,75)",
+     "Dining venue (%)": "rgb(233,200,38)",
+     "Leisure (%)": "rgb(253,183,21)",
+     "Kindergarten, after-school child care (%)": "rgb(216,70,3)",
+     "Day-care centre for the elderly (%)": "rgb(248,143,61)",
+     "Care facility (%)": "rgb(252,208,160)",
+     "Educational institution (%)": "rgb(125,109,133)",
+     "Work place (%)": "rgb(228,27,24)",
+     "Medical rehabilitation (%)": "rgb(1,68,24)",
+     "Medical practice (%)": "rgb(40,134,73)",
+     "Hospital (%)": "rgb(113,197,117)",
+     "Health care centre (%)": "rgb(198,233,190)",
+     "Residential home (%)": "rgb(8,49,100)",
+     "Refugee accomodation (%)": "rgb(24,99,172)",
+     "Retirement/nursing home (%)": "rgb(71,150,203)",
+     "Private household (%)": "rgb(147,194,221)",
+     "Residences (%)": "rgb(207,223,248)",
+     "Not documented in an outbreak (%)": "rgb(220,220,220)"}
+title = Cases attributed to an outbreak in percent (note: figures may still rise in the final weeks)<br>(display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Cases in Percent
+yaxis_tickformat = .2f
+barmode = stack
+
+
 [FIG_DISTRIBUTION_OF_INHABITANTS]
 x = age group
 y = ["inhabitants"]
