include deaths by week of death and age group

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -328,6 +328,64 @@ yaxis_tickformat = .2f
 barmode = stack
 
 
+[FIG_DEATHS_BY_WEEK_OF_DEATH_AND_AGE_GROUP]
+x = calendar week
+y = ["age group 00 - 09",
+     "age group 10 - 19",
+     "age group 20 - 29",
+     "age group 30 - 39",
+     "age group 40 - 49",
+     "age group 50 - 59",
+     "age group 60 - 69",
+     "age group 70 - 79",
+     "age group 80 - 89",
+     "age group 90+"]
+color_discrete_map = {"age group 00 - 09": "rgb(79,129,189)",
+                      "age group 10 - 19": "rgb(207,64,64)",
+                      "age group 20 - 29": "rgb(118,146,59)",
+                      "age group 30 - 39": "rgb(190,91,75)",
+                      "age group 40 - 49": "rgb(8,49,100)",
+                      "age group 50 - 59": "rgb(233,132,186)",
+                      "age group 60 - 69": "rgb(40,134,73)",
+                      "age group 70 - 79": "rgb(48,131,155)",
+                      "age group 80 - 89": "rgb(248,143,61)",
+                      "age group 90+": "rgb(254,186,79)"}
+title = Reported Deaths by Week of Death and Age Group<br>display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Deaths
+yaxis_tickformat = .0f
+barmode = stack
+
+
+[FIG_DEATHS_BY_WEEK_OF_DEATH_AND_AGE_GROUP_IN_PERCENT]
+x = calendar week
+y = ["age group 00 - 09 (%)",
+     "age group 10 - 19 (%)",
+     "age group 20 - 29 (%)",
+     "age group 30 - 39 (%)",
+     "age group 40 - 49 (%)",
+     "age group 50 - 59 (%)",
+     "age group 60 - 69 (%)",
+     "age group 70 - 79 (%)",
+     "age group 80 - 89 (%)",
+     "age group 90+ (%)"]
+color_discrete_map = {"age group 00 - 09 (%)": "rgb(79,129,189)",
+                      "age group 10 - 19 (%)": "rgb(207,64,64)",
+                      "age group 20 - 29 (%)": "rgb(118,146,59)",
+                      "age group 30 - 39 (%)": "rgb(190,91,75)",
+                      "age group 40 - 49 (%)": "rgb(8,49,100)",
+                      "age group 50 - 59 (%)": "rgb(233,132,186)",
+                      "age group 60 - 69 (%)": "rgb(40,134,73)",
+                      "age group 70 - 79 (%)": "rgb(48,131,155)",
+                      "age group 80 - 89 (%)": "rgb(248,143,61)",
+                      "age group 90+ (%)": "rgb(254,186,79)"}
+title = Reported Deaths by Week of Death and Age Group in percent<br>display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Deaths
+yaxis_tickformat = .0f
+barmode = stack
+
+
 [FIG_DISTRIBUTION_OF_INHABITANTS]
 x = age group
 y = ["inhabitants"]
