--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -228,9 +228,7 @@ barmode = stack
 
 [FIG_CASES_PER_OUTBREAK]
 x = calendar week
-y = ["Unknown",
-     "Other",
-     "Public transport",
+y = ["Public transport",
      "Overnight stay",
      "Dining venue",
      "Leisure",
@@ -248,7 +246,9 @@ y = ["Unknown",
      "Retirement/nursing home",
      "Private household",
      "Residences",
-     "Not documented in an outbreak"]
+     "Other",
+     "Not documented in an outbreak",
+     "Unknown"]
 color_discrete_map = {"Unknown": "rgb(127,127,127)",
      "Other": "rgb(179,179,179)",
      "Public transport": "rgb(233,132,186)",
@@ -279,9 +279,7 @@ barmode = stack
 
 [FIG_CASES_PER_OUTBREAK_IN_PERCENT]
 x = calendar week
-y = ["Unknown (%)",
-     "Other (%)",
-     "Public transport (%)",
+y = ["Public transport (%)",
      "Overnight stay (%)",
      "Dining venue (%)",
      "Leisure (%)",
@@ -299,7 +297,9 @@ y = ["Unknown (%)",
      "Retirement/nursing home (%)",
      "Private household (%)",
      "Residences (%)",
-     "Not documented in an outbreak (%)"]
+     "Other (%)",
+     "Not documented in an outbreak (%)",
+     "Unknown (%)"]
 color_discrete_map = {"Unknown (%)": "rgb(127,127,127)",
      "Other (%)": "rgb(179,179,179)",
      "Public transport (%)": "rgb(233,132,186)",
