Add new graph and adapt to changes by RKI

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -228,9 +228,7 @@ barmode = stack
 
 [FIG_CASES_PER_OUTBREAK]
 x = calendar week
-y = ["Unknown",
-     "Other",
-     "Public transport",
+y = ["Public transport",
      "Overnight stay",
      "Dining venue",
      "Leisure",
@@ -248,7 +246,9 @@ y = ["Unknown",
      "Retirement/nursing home",
      "Private household",
      "Residences",
-     "Not documented in an outbreak"]
+     "Other",
+     "Not documented in an outbreak",
+     "Unknown"]
 color_discrete_map = {"Unknown": "rgb(127,127,127)",
      "Other": "rgb(179,179,179)",
      "Public transport": "rgb(233,132,186)",
@@ -279,9 +279,7 @@ barmode = stack
 
 [FIG_CASES_PER_OUTBREAK_IN_PERCENT]
 x = calendar week
-y = ["Unknown (%)",
-     "Other (%)",
-     "Public transport (%)",
+y = ["Public transport (%)",
      "Overnight stay (%)",
      "Dining venue (%)",
      "Leisure (%)",
@@ -299,7 +297,9 @@ y = ["Unknown (%)",
      "Retirement/nursing home (%)",
      "Private household (%)",
      "Residences (%)",
-     "Not documented in an outbreak (%)"]
+     "Other (%)",
+     "Not documented in an outbreak (%)",
+     "Unknown (%)"]
 color_discrete_map = {"Unknown (%)": "rgb(127,127,127)",
      "Other (%)": "rgb(179,179,179)",
      "Public transport (%)": "rgb(233,132,186)",
@@ -325,6 +325,64 @@ title = Cases attributed to an outbreak in percent (note: figures may still rise
 xaxis_title = Calendar week
 yaxis_title = Cases in Percent
 yaxis_tickformat = .2f
+barmode = stack
+
+
+[FIG_DEATHS_BY_WEEK_OF_DEATH_AND_AGE_GROUP]
+x = calendar week
+y = ["age group 00 - 09",
+     "age group 10 - 19",
+     "age group 20 - 29",
+     "age group 30 - 39",
+     "age group 40 - 49",
+     "age group 50 - 59",
+     "age group 60 - 69",
+     "age group 70 - 79",
+     "age group 80 - 89",
+     "age group 90+"]
+color_discrete_map = {"age group 00 - 09": "rgb(79,129,189)",
+                      "age group 10 - 19": "rgb(207,64,64)",
+                      "age group 20 - 29": "rgb(118,146,59)",
+                      "age group 30 - 39": "rgb(190,91,75)",
+                      "age group 40 - 49": "rgb(8,49,100)",
+                      "age group 50 - 59": "rgb(233,132,186)",
+                      "age group 60 - 69": "rgb(40,134,73)",
+                      "age group 70 - 79": "rgb(48,131,155)",
+                      "age group 80 - 89": "rgb(248,143,61)",
+                      "age group 90+": "rgb(254,186,79)"}
+title = Reported Deaths by Week of Death and Age Group<br>display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Deaths
+yaxis_tickformat = .0f
+barmode = stack
+
+
+[FIG_DEATHS_BY_WEEK_OF_DEATH_AND_AGE_GROUP_IN_PERCENT]
+x = calendar week
+y = ["age group 00 - 09 (%)",
+     "age group 10 - 19 (%)",
+     "age group 20 - 29 (%)",
+     "age group 30 - 39 (%)",
+     "age group 40 - 49 (%)",
+     "age group 50 - 59 (%)",
+     "age group 60 - 69 (%)",
+     "age group 70 - 79 (%)",
+     "age group 80 - 89 (%)",
+     "age group 90+ (%)"]
+color_discrete_map = {"age group 00 - 09 (%)": "rgb(79,129,189)",
+                      "age group 10 - 19 (%)": "rgb(207,64,64)",
+                      "age group 20 - 29 (%)": "rgb(118,146,59)",
+                      "age group 30 - 39 (%)": "rgb(190,91,75)",
+                      "age group 40 - 49 (%)": "rgb(8,49,100)",
+                      "age group 50 - 59 (%)": "rgb(233,132,186)",
+                      "age group 60 - 69 (%)": "rgb(40,134,73)",
+                      "age group 70 - 79 (%)": "rgb(48,131,155)",
+                      "age group 80 - 89 (%)": "rgb(248,143,61)",
+                      "age group 90+ (%)": "rgb(254,186,79)"}
+title = Reported Deaths by Week of Death and Age Group in percent<br>display note: For better recognition, individual variables can be deselected by clicking on the variable name in the legend and selected alone by double-clicking.)
+xaxis_title = Calendar week
+yaxis_title = Deaths
+yaxis_tickformat = .0f
 barmode = stack
 
 
