update title of graph

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -442,7 +442,7 @@ y = ["newly admitted intensive care patients with a positive COVID-19 test",
      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
 color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,121,164,0.15)",
                       "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"}
-title = New admissions of COVID-19 patients to intensive care unit since the day before
+title = New admissions of COVID-19 patients to intensive care unit since the day before (incl. transfers)
 xaxis_title = Date
 yaxis_title = Cases
 yaxis_tickformat = ,f
