new admissions intensive care without transfers

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -438,9 +438,13 @@ yaxis_tickformat = ,f
 
 [FIG_INTENSIVE_NEW]
 x = date
-y = ["newly admitted intensive care patients with a positive COVID-19 test",
+y = ["newly admitted intensive care patients with a positive COVID-19 test inclusive transfers",
+     "newly admitted intensive care patients with a positive COVID-19 test inclusive transfers (mean ±3 days)",
+     "newly admitted intensive care patients with a positive COVID-19 test",
      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
-color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,121,164,0.15)",
+color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test inclusive transfers": "rgba(117,214,193,0.15)",
+                      "newly admitted intensive care patients with a positive COVID-19 test inclusive transfers (mean ±3 days)": "rgb(117,214,193)",
+                      "newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,121,164,0.15)",
                       "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"}
 title = New admissions of COVID-19 patients to intensive care unit since the day before (incl. transfers)
 xaxis_title = Date
