median and mean ages

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -200,6 +200,37 @@ yaxis_title = Percentage
 yaxis_tickformat = .2f
 
 
+[FIG_MEDIAN_AGES]
+x = calendar week
+y = ["median age reported cases",
+     "median age hospitalizations",
+     "median age intensive care",
+     "median age reported deaths"]
+color_discrete_map = {"median age reported cases": "rgb(0,121,164)",
+                      "median age hospitalizations": "rgb(254,186,79)",
+                      "median age intensive care": "rgb(248,143,61)",
+                      "median age reported deaths": "rgb(255,0,0)"}
+title = Median age for reported cases and deaths, hospitalizations and intensive care patients
+xaxis_title = Calendar week
+yaxis_title = Median age
+yaxis_tickformat = .0f
+
+[FIG_MEAN_AGES]
+x = calendar week
+y = ["mean age reported cases",
+     "mean age hospitalizations",
+     "mean age intensive care",
+     "mean age reported deaths"]
+color_discrete_map = {"mean age reported cases": "rgb(0,121,164)",
+                      "mean age hospitalizations": "rgb(254,186,79)",
+                      "mean age intensive care": "rgb(248,143,61)",
+                      "mean age reported deaths": "rgb(255,0,0)"}
+title = Mean age for reported cases and deaths, hospitalizations and intensive care patients
+xaxis_title = Calendar week
+yaxis_title = Mean age
+yaxis_tickformat = .0f
+
+
 [FIG_HOSPITALIZATIONS]
 x = calendar week
 y = ["cases hospitalized age group 00 - 04",
