r values calculated by nowcast rki

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -133,12 +133,16 @@ yaxis_tickformat = ,f
 x = date
 y = ["R value by cases (mean of ±3 days)",
      "7 day R value (Nowcast RKI)",
+     "R value calculated with cases (mean of ±3 days of Nowcast RKI)",
      "7 day R value (Nowcast RKI, -5 days incubation period)",
+     "R value by Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)",
      "daily proportionate increase of cases (mean of ±3 days)"]
 color_discrete_map = {"R value by cases (mean of ±3 days)": "rgb(0,121,164)",
+                      "7 day R value (Nowcast RKI)": "rgba(117,214,193,0.3)",
+                      "R value calculated with cases (mean of ±3 days of Nowcast RKI)": "rgb(117,214,193)",
                       "daily proportionate increase of cases (mean of ±3 days)": "rgba(0,121,164,0.15)",
-                      "7 day R value (Nowcast RKI)": "rgb(117,214,193)",
-                      "7 day R value (Nowcast RKI, -5 days incubation period)": "rgb(255,165,0)"
+                      "7 day R value (Nowcast RKI, -5 days incubation period)": "rgba(255,165,0,0.3)",
+                      "R value by Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgb(255,165,0)"
                      }
 title = R value and daily proportional change
 xaxis_title = Date
