Pullrequest changes in intensive registry data structure

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -133,12 +133,16 @@ yaxis_tickformat = ,f
 x = date
 y = ["R value by cases (mean of ±3 days)",
      "7 day R value (Nowcast RKI)",
+     "R value calculated with cases (mean of ±3 days of Nowcast RKI)",
      "7 day R value (Nowcast RKI, -5 days incubation period)",
+     "R value by Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)",
      "daily proportionate increase of cases (mean of ±3 days)"]
 color_discrete_map = {"R value by cases (mean of ±3 days)": "rgb(0,121,164)",
+                      "7 day R value (Nowcast RKI)": "rgba(117,214,193,0.3)",
+                      "R value calculated with cases (mean of ±3 days of Nowcast RKI)": "rgb(117,214,193)",
                       "daily proportionate increase of cases (mean of ±3 days)": "rgba(0,121,164,0.15)",
-                      "7 day R value (Nowcast RKI)": "rgb(117,214,193)",
-                      "7 day R value (Nowcast RKI, -5 days incubation period)": "rgb(255,165,0)"
+                      "7 day R value (Nowcast RKI, -5 days incubation period)": "rgba(255,165,0,0.3)",
+                      "R value by Infections (mean of ±3 days based on 7 day nowcast of RKI - 5 days regarding incubation period)": "rgb(255,165,0)"
                      }
 title = R value and daily proportional change
 xaxis_title = Date
@@ -198,6 +202,37 @@ title = Clinical Aspects<br>(note: figures may still rise sharply in the final w
 xaxis_title = Calendar week
 yaxis_title = Percentage
 yaxis_tickformat = .2f
+
+
+[FIG_MEDIAN_AGES]
+x = calendar week
+y = ["median age reported cases",
+     "median age hospitalizations",
+     "median age intensive care",
+     "median age reported deaths"]
+color_discrete_map = {"median age reported cases": "rgb(0,121,164)",
+                      "median age hospitalizations": "rgb(254,186,79)",
+                      "median age intensive care": "rgb(248,143,61)",
+                      "median age reported deaths": "rgb(255,0,0)"}
+title = Median age for reported cases and deaths, hospitalizations and intensive care patients
+xaxis_title = Calendar week
+yaxis_title = Median age
+yaxis_tickformat = .0f
+
+[FIG_MEAN_AGES]
+x = calendar week
+y = ["mean age reported cases",
+     "mean age hospitalizations",
+     "mean age intensive care",
+     "mean age reported deaths"]
+color_discrete_map = {"mean age reported cases": "rgb(0,121,164)",
+                      "mean age hospitalizations": "rgb(254,186,79)",
+                      "mean age intensive care": "rgb(248,143,61)",
+                      "mean age reported deaths": "rgb(255,0,0)"}
+title = Mean age for reported cases and deaths, hospitalizations and intensive care patients
+xaxis_title = Calendar week
+yaxis_title = Mean age
+yaxis_tickformat = .0f
 
 
 [FIG_HOSPITALIZATIONS]
@@ -438,9 +473,13 @@ yaxis_tickformat = ,f
 
 [FIG_INTENSIVE_NEW]
 x = date
-y = ["newly admitted intensive care patients with a positive COVID-19 test",
+y = ["newly admitted intensive care patients with a positive COVID-19 test inclusive transfers",
+     "newly admitted intensive care patients with a positive COVID-19 test inclusive transfers (mean ±3 days)",
+     "newly admitted intensive care patients with a positive COVID-19 test",
      "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
-color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,121,164,0.15)",
+color_discrete_map = {"newly admitted intensive care patients with a positive COVID-19 test inclusive transfers": "rgba(117,214,193,0.15)",
+                      "newly admitted intensive care patients with a positive COVID-19 test inclusive transfers (mean ±3 days)": "rgb(117,214,193)",
+                      "newly admitted intensive care patients with a positive COVID-19 test": "rgba(0,121,164,0.15)",
                       "newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"}
 title = New admissions of COVID-19 patients to intensive care unit since the day before (incl. transfers)
 xaxis_title = Date
