r values calculated by new admissions to intensive care

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -486,6 +486,17 @@ xaxis_title = Date
 yaxis_title = Cases
 yaxis_tickformat = ,f
 
+[FIG_INTENSIVE_R_VALUE]
+x = date
+y = ["R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
+color_discrete_map = {"R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"
+                     }
+title = R value calculated by new admissions to intensive care
+xaxis_title = Date
+yaxis_title = R value
+yaxis_tickformat = .2f
+yaxis = {"range": [0, 2]}
+
 
 [FIG_INTENSIVE_DAILY_CHANGE]
 x = date
