add new plots for intensive register

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -488,8 +488,12 @@ yaxis_tickformat = ,f
 
 [FIG_INTENSIVE_R_VALUE]
 x = date
-y = ["R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
-color_discrete_map = {"R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"
+y = ["R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)",
+     "mean ±3 days of R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)",
+     "mean ±6 days of R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)"]
+color_discrete_map = {"R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgba(0,121,164,0.15)",
+                      "mean ±3 days of R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgba(0,121,164,0.3)",
+                      "mean ±6 days of R value calculated by newly admitted intensive care patients with a positive COVID-19 test (mean ±3 days)": "rgb(0,121,164)"
                      }
 title = R value calculated by new admissions to intensive care
 xaxis_title = Date
@@ -501,9 +505,11 @@ yaxis = {"range": [0, 2]}
 [FIG_INTENSIVE_DAILY_CHANGE]
 x = date
 y = ["intensive care patients with positive COVID-19 test (change from previous day)",
-     "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)"]
+     "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)",
+     "intensive care patients with positive COVID-19 test (change from previous day, mean ±6 days)"]
 color_discrete_map = {"intensive care patients with positive COVID-19 test (change from previous day)": "rgba(0,121,164,0.15)",
-                      "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)": "rgb(0,121,164)"}
+                      "intensive care patients with positive COVID-19 test (change from previous day, mean ±3 days)": "rgba(0,121,164,0.3)",
+                      "intensive care patients with positive COVID-19 test (change from previous day, mean ±6 days)": "rgb(0,121,164)"}
 title = Change from previous day of intensiv care beds occupied by COVID-19 patients
 xaxis_title = Date
 yaxis_title = Cases
