add 7 day incidence by reporting date

--- a/layout/graph_definitions.ini
+++ b/layout/graph_definitions.ini
@@ -153,11 +153,13 @@ yaxis = {"range": [0, 2]}
 
 [FIG_7D_INCIDENCES]
 x = date
-y = ["7 day incidence per 100,000 inhabitants",
+y = ["7 day incidence per 100,000 inhabitants by reporting date (RKI version)",
+     "7 day incidence per 100,000 inhabitants",
      "7 day incidence (by cases (mean of ±3 days)) per 100,000 inhabitants",
      "7 day deaths per 1,000,000 inhabitants",
      "7 day deaths (by cases (mean of ±3 days)) per 1,000,000 inhabitants"]
-color_discrete_map = {"7 day incidence per 100,000 inhabitants": "rgba(0,121,164,0.15)",
+color_discrete_map = {"7 day incidence per 100,000 inhabitants by reporting date (RKI version)": "rgba(0,121,164,0.15)",
+                      "7 day incidence per 100,000 inhabitants": "rgba(0,121,164,0.3)",
                       "7 day incidence (by cases (mean of ±3 days)) per 100,000 inhabitants": "rgb(0,121,164)",
                       "7 day deaths per 1,000,000 inhabitants": "rgba(255,0,0,0.15)",
                       "7 day deaths (by cases (mean of ±3 days)) per 1,000,000 inhabitants": "rgb(255,0,0)"}
